unpackaged/main/default/objects/loan__Loan_Product__c/loan__Loan_Product__c.object-meta.xml
<CustomObject>
    <description>Lending Product Definition1</description>
    <label>Lending Product</label>
    <nameField>
        <label>Loan Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lending Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>