unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Accrual_Based_Accounting__c.field-meta.xml
<CustomField>
    <fullName>loan__Accrual_Based_Accounting__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>This type of Accounting records income when earned and records deductions when expenses are incurred.</inlineHelpText>
    <label>Accrual Based Accounting</label>
    <type>Checkbox</type>
</CustomField>