unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Accrue_Income_On_Suspended_Account__c.field-meta.xml
<CustomField>
    <fullName>loan__Accrue_Income_On_Suspended_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the income is to be accrued on a suspended account</description>
    <inlineHelpText>Indicates if the income is to be accrued on a suspended account</inlineHelpText>
    <label>Accrue Income On Suspended Account</label>
    <type>Checkbox</type>
</CustomField>