unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Adjust_Deposit_Amount_In_Payoff__c.field-meta.xml
<CustomField>
    <fullName>loan__Adjust_Deposit_Amount_In_Payoff__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field indicates whether to consider the deposit amount for this deposit in Payoff calculation or not</description>
    <inlineHelpText>This field indicates whether to consider the deposit amount for this deposit in Payoff calculation or not</inlineHelpText>
    <label>Adjust Deposit Amount In Payoff</label>
    <type>Checkbox</type>
</CustomField>