unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Advance_Tolerance_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Advance_Tolerance_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Advance Tolerance Amount, for LoC</description>
    <label>Advance Tolerance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>