unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Amortization_Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>loan__Amortization_Calculation_Method__c</fullName>
    <description>(Deprecated)</description>
    <inlineHelpText>This is the method used to calculate the Interest Amortization. Only Interest bearing is supported at the moment.</inlineHelpText>
    <label>Amortization Method(Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interest Bearing</fullName>
                <default>true</default>
                <label>Interest Bearing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>