unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Approval_Date__c</fullName>
    <inlineHelpText>The date on which the loan is approved.</inlineHelpText>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>