unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Cash_Based_Accounting__c.field-meta.xml
<CustomField>
    <fullName>loan__Cash_Based_Accounting__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This type of Accounting reports income when received and reports expenses when paid</inlineHelpText>
    <label>Cash Based Accounting</label>
    <type>Checkbox</type>
</CustomField>