unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Default_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>loan__Default_Interest_Rate__c</fullName>
    <description>Default interest rate</description>
    <inlineHelpText>Default interest rate</inlineHelpText>
    <label>Default Interest Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>