unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Digits_After_Decimals__c.field-meta.xml
<CustomField>
    <fullName>loan__Digits_After_Decimals__c</fullName>
    <defaultValue>2</defaultValue>
    <description>Specify the number of digits after decimals to be stored for calculation purposes.
DEPRECATED - Moved this setup at Org Level.</description>
    <inlineHelpText>Specify the number of digits after decimals to be stored for calculation purposes.
DEPRECATED - Moved this setup at Org Level.</inlineHelpText>
    <label>Digits After Decimal</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>