unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Excess_Threshold_For_Reschedule__c.field-meta.xml
<CustomField>
    <fullName>loan__Excess_Threshold_For_Reschedule__c</fullName>
    <inlineHelpText>Minimum percentage of principal remaining received as excess in a payment, which must trigger a reschedule of the loan.</inlineHelpText>
    <label>Excess Threshold % for Reschedule</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>