unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Fee_Set__c.field-meta.xml
<CustomField>
    <fullName>loan__Fee_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Fee Set</description>
    <inlineHelpText>Fee set contains the details of all the fees associated with the loan.</inlineHelpText>
    <label>Fee Set</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Selected Fee Set's category must be of type 'Loan' and it should include at least one fee.</errorMessage>
        <filterItems>
            <field>loan__Fee_Set__c.loan__Fee_Set_Category__c</field>
            <operation>equals</operation>
            <value>Loan</value>
        </filterItems>
        <filterItems>
            <field>loan__Fee_Set__c.loan__Number_of_Fees__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>loan__Fee_Set__c</referenceTo>
    <relationshipName>Loan_Products</relationshipName>
    <type>Lookup</type>
</CustomField>