unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Floating_Rate_Change_Action__c.field-meta.xml
<CustomField>
    <fullName>loan__Floating_Rate_Change_Action__c</fullName>
    <inlineHelpText>When floating rate is changed, the reset process will regenerate the repayment schedule of the loans and change either payment amount or keep the payment amount same and adjust the last payment as per this setup option.</inlineHelpText>
    <label>Interest Rate Change Method</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>loan__Interest_Rate_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Change Payment Amount</fullName>
                <default>true</default>
                <label>Change Payment Amount</label>
            </value>
            <value>
                <fullName>Keep Same Payment Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>