unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Floating_Rate_Index__c.field-meta.xml
<CustomField>
    <fullName>loan__Floating_Rate_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Floating Rate Index for Lending Products with Interest Type 'Floating'.</inlineHelpText>
    <label>Floating Rate Index</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>loan__Floating_Rate_Index__c.loan__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>loan__Floating_Rate_Index__c.loan__Rate_Records_Count__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filterItems>
        <infoMessage>Select a Floating Rate Index for the Lending Product</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>loan__Floating_Rate_Index__c</referenceTo>
    <relationshipLabel>Lending Products</relationshipLabel>
    <relationshipName>Lending_Products</relationshipName>
    <type>Lookup</type>
</CustomField>