unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Frequency_of_Loan_Payment__c.field-meta.xml
<CustomField>
    <fullName>loan__Frequency_of_Loan_Payment__c</fullName>
    <inlineHelpText>This decides the Payment Frequency
For loans, the below are supported ones.
Daily
Weekly
Bi-weekly
Semi-Monthly
Monthly
Bi-Monthly  
Quarterly
Semi-Annual
Annual 
SinglePmt
For Line of credit only Monthly are supported.</inlineHelpText>
    <label>Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
            </value>
            <value>
                <fullName>Semi-Monthly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Bi-Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>SinglePmt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>