unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__General_Rounding_Mode__c.field-meta.xml
<CustomField>
    <fullName>loan__General_Rounding_Mode__c</fullName>
    <defaultValue>"Nearest with carried over"</defaultValue>
    <description>This field specifies the rounding method to be used for rounding.</description>
    <inlineHelpText>Rounding mode for accrued numbers
DEPRECATED - Moved this setup at Org Level.</inlineHelpText>
    <label>Rounding Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ROUND_NEAREST</fullName>
            </value>
            <value>
                <fullName>Round Up</fullName>
            </value>
            <value>
                <fullName>Round Down</fullName>
            </value>
            <value>
                <fullName>Nearest with carried over</fullName>
                <default>true</default>
                <label>Nearest with carried over</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>