unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Higher_Investor_Certificate_Rate_Allowed__c.field-meta.xml
<CustomField>
    <fullName>loan__Higher_Investor_Certificate_Rate_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This lending product can have loans with some of the IOs with higher certificate rate than the loan's interest rate. However weighted average of certificate rate with the IO share should be less than Interest rate on loan contract</description>
    <label>Allow Higher Investor Certificate Rate</label>
    <type>Checkbox</type>
</CustomField>