unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Interest_Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Calculation_Method__c</fullName>
    <inlineHelpText>Flat - Interest computed every month on the original amount. 
Declining Balance - Amount remaining unpaid on a loan, this decreases with every payment of the loan installment.
Flexible Repayment - Interest rate changes over a period of time.</inlineHelpText>
    <label>Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Declining Balance</fullName>
                <default>true</default>
                <label>Declining Balance</label>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Flexible Repayment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>