unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Interest_Only_Period__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Only_Period__c</fullName>
    <inlineHelpText>This is the period during which only the Interest is calculated and after that it takes both Principal and Interest.</inlineHelpText>
    <label>Interest Only Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>