unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Interest_Posting_Frequency__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Posting_Frequency__c</fullName>
    <label>Interest Posting Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>