unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Interest_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Rate_Type__c</fullName>
    <label>Interest Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
                <default>true</default>
                <label>Fixed</label>
            </value>
            <value>
                <fullName>Floating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>