unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Is_Capitalization_Enabled__c.field-meta.xml
<CustomField>
    <fullName>loan__Is_Capitalization_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Capitalization Enabled</label>
    <type>Checkbox</type>
</CustomField>