unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Loan_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Product_Type__c</fullName>
    <inlineHelpText>Type of Product, Possible values are 
a) Loan
b) Line of Credit
c) Amortization Based Loan
d) Merchant Cash Advance</inlineHelpText>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loan</fullName>
                <default>true</default>
                <label>Loan</label>
            </value>
            <value>
                <fullName>Line of Credit</fullName>
            </value>
            <value>
                <fullName>Merchant Cash Advance</fullName>
            </value>
            <value>
                <fullName>Amz Based Loan</fullName>
            </value>
            <value>
                <fullName>Flexible Amz Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>