unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Max_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>loan__Max_Interest_Rate__c</fullName>
    <description>Max interest rate</description>
    <inlineHelpText>Max interest rate</inlineHelpText>
    <label>Max Interest Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>