unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Max_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Max_Loan_Amount__c</fullName>
    <description>Max loan amount</description>
    <inlineHelpText>Maximum loan amount to be disbursed for this Loan product</inlineHelpText>
    <label>Max Financed Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>