unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Max_Overdue_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>loan__Max_Overdue_Interest_Rate__c</fullName>
    <label>Max Overdue Interest Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>