unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Maximum_Gap_Between_Installments__c.field-meta.xml
<CustomField>
    <fullName>loan__Maximum_Gap_Between_Installments__c</fullName>
    <description>Maximum number of days between 2 installments</description>
    <inlineHelpText>Maximum number of days between 2 installments</inlineHelpText>
    <label>Maximum Gap Between Installments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>