unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Min_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>loan__Min_Interest_Rate__c</fullName>
    <description>Min Interest Rate</description>
    <inlineHelpText>Min Interest Rate</inlineHelpText>
    <label>Min Interest Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>