unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Min_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Min_Loan_Amount__c</fullName>
    <description>Min loan amount</description>
    <inlineHelpText>Minimum loan amount to be disbursed for this Loan product</inlineHelpText>
    <label>Min Financed Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>