unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Min_Number_of_Installments__c.field-meta.xml
<CustomField>
    <fullName>loan__Min_Number_of_Installments__c</fullName>
    <description>Minimum number of installments</description>
    <inlineHelpText>Minimum number of installments for the loan</inlineHelpText>
    <label>Min Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>