unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Minimum_Amount_Due_Type__c.field-meta.xml
<CustomField>
    <fullName>loan__Minimum_Amount_Due_Type__c</fullName>
    <defaultValue>"Percent"</defaultValue>
    <label>Minimum Amount Due Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Fixed Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>