unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Minimum_Gap_Between_Installments__c.field-meta.xml
<CustomField>
    <fullName>loan__Minimum_Gap_Between_Installments__c</fullName>
    <description>Specifies the minimum gap between 2 installments in days.
Mandatory if Can configure variable installments is checked.</description>
    <inlineHelpText>Specifies the minimum gap between 2 installments in days.
Mandatory if Can configure variable installments is checked.</inlineHelpText>
    <label>Minimum Gap Between Installments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>