unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Minimum_Installment_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Minimum_Installment_Amount__c</fullName>
    <description>Specifies the minimum installment amount for a variable installment loan</description>
    <inlineHelpText>Specifies the minimum installment amount for a variable installment loan</inlineHelpText>
    <label>Minimum Bill Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>