unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Payment_Application_Mode__c.field-meta.xml
<CustomField>
    <fullName>loan__Payment_Application_Mode__c</fullName>
    <description>If the value is Future Dues, Reserve Amount For Next Due will be used for satisfying Bills. Otherwise, Reserve Amount For Next Due will not be used for satisfying Bills. If Deposit is selected then extra amount is used to increase the deposit amount.</description>
    <inlineHelpText>Select Future Dues if the loan payments must be used to satisfy future dues. 
 Select Current Dues if the loan payments must be used to to satisfy present dues.</inlineHelpText>
    <label>Payment Application Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Future Dues</fullName>
                <default>true</default>
                <label>Future Dues</label>
            </value>
            <value>
                <fullName>Current Dues</fullName>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>