unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Payment_Application_Order__c.field-meta.xml
<CustomField>
    <fullName>loan__Payment_Application_Order__c</fullName>
    <description>If Spread is chosen, all components are sorted by Spread, and within given spread, the components will be sorted by date and vice-versa.</description>
    <inlineHelpText>If Spread is chosen, all components are sorted by Spread, and within given spread, the components will be sorted by date and vice-versa.</inlineHelpText>
    <label>Payment Application Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spread</fullName>
                <default>true</default>
                <label>Spread</label>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>