unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Payment_Tolerance_Rate__c.field-meta.xml
<CustomField>
    <fullName>loan__Payment_Tolerance_Rate__c</fullName>
    <inlineHelpText>Tolerance Rate for loan repayments</inlineHelpText>
    <label>Payment Tolerance Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>