unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Pre_Bill_Days__c.field-meta.xml
<CustomField>
    <fullName>loan__Pre_Bill_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of days for the bill to be generated before the due date.</inlineHelpText>
    <label>Pre Bill Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>