unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Product_Excess_Account__c.field-meta.xml
<CustomField>
    <fullName>loan__Product_Excess_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the Excess general ledger account for the lending product</inlineHelpText>
    <label>Product Excess Account</label>
    <referenceTo>loan__MF_Account__c</referenceTo>
    <relationshipLabel>Lending Products (Product Excess Account)</relationshipLabel>
    <relationshipName>Loan_Products6Vhf</relationshipName>
    <type>Lookup</type>
</CustomField>