unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Product_GL_Code_Interest__c.field-meta.xml
<CustomField>
    <fullName>loan__Product_GL_Code_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product GL Code - Interest</description>
    <inlineHelpText>Product GL Code - Interest</inlineHelpText>
    <label>Product GL Code - Interest</label>
    <referenceTo>loan__MF_Account__c</referenceTo>
    <relationshipName>Loan_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>