unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Product_Int_On_Overdue_Income_Acc__c.field-meta.xml
<CustomField>
    <fullName>loan__Product_Int_On_Overdue_Income_Acc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Int on Overdue Income Acc</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>loan__MF_Account__c.loan__Account_Type__r.Name</field>
            <operation>equals</operation>
            <value>30000 - INCOME</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>loan__MF_Account__c</referenceTo>
    <relationshipLabel>Lending Products (Product Int on Overdue Income Acc)</relationshipLabel>
    <relationshipName>Loan_Products11</relationshipName>
    <type>Lookup</type>
</CustomField>