unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Product_Interest_Amortization_Account__c.field-meta.xml
<CustomField>
    <fullName>loan__Product_Interest_Amortization_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Interest Receivable Account</label>
    <referenceTo>loan__MF_Account__c</referenceTo>
    <relationshipLabel>Lending Products (Product Interest Receivable Account)</relationshipLabel>
    <relationshipName>Loan_Products9</relationshipName>
    <type>Lookup</type>
</CustomField>