unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Product_Interest_Income_Account__c.field-meta.xml
<CustomField>
    <fullName>loan__Product_Interest_Income_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the interest income general ledger account for the loan product.</inlineHelpText>
    <label>Product Interest Income Account</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>loan__MF_Account__c.loan__Account_Type__r.Name</field>
            <operation>equals</operation>
            <value>30000 - INCOME</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>loan__MF_Account__c</referenceTo>
    <relationshipLabel>Lending Products (Product Interest Income Account)</relationshipLabel>
    <relationshipName>Loan_Products3</relationshipName>
    <type>Lookup</type>
</CustomField>