unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Product_Loan_Control_Account__c.field-meta.xml
<CustomField>
    <fullName>loan__Product_Loan_Control_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the loan control general ledger account for the loan product.</inlineHelpText>
    <label>Product Loan Control Account</label>
    <referenceTo>loan__MF_Account__c</referenceTo>
    <relationshipName>Loan_Products2</relationshipName>
    <type>Lookup</type>
</CustomField>