unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Product_Loan_Loss_Reserve_Account__c.field-meta.xml
<CustomField>
    <fullName>loan__Product_Loan_Loss_Reserve_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the loan loss reverse general ledger account for the loan product.</inlineHelpText>
    <label>Product Loan Loss Reserve Account</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>loan__MF_Account__c.loan__Account_Type__r.Name</field>
            <operation>equals</operation>
            <value>20000 - LIABILITIES</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>loan__MF_Account__c</referenceTo>
    <relationshipLabel>Lending Products (Product Loan Loss Reserve Account)</relationshipLabel>
    <relationshipName>Loan_Products8</relationshipName>
    <type>Lookup</type>
</CustomField>