unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Product_Overdue_Interest_Account__c.field-meta.xml
<CustomField>
    <fullName>loan__Product_Overdue_Interest_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Overdue Interest Account</label>
    <referenceTo>loan__MF_Account__c</referenceTo>
    <relationshipName>Loan_Products4</relationshipName>
    <type>Lookup</type>
</CustomField>