unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Product_Suspended_Int_On_Overdue_Acc__c.field-meta.xml
<CustomField>
    <fullName>loan__Product_Suspended_Int_On_Overdue_Acc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Suspended Int On Overdue Acc</label>
    <referenceTo>loan__MF_Account__c</referenceTo>
    <relationshipName>Loan_Products10</relationshipName>
    <type>Lookup</type>
</CustomField>